# Ballistics-Lib

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  HANDOFF.md  Jenkinsfile  README.md  bitbucket-pipelines.yml
.github/workflows/: ci.yml
data/: README.md  launcher_config.json  munitions.json
docs/: architecture.md
examples/: CMakeLists.txt  README.md  RENDERER_README.md  fire_control_async.cpp  realtime_demo.cpp  renderer.cpp
include/: README.md
include/ballistics/: async_solver.hpp  atmosphere.hpp  ballistics.hpp  fire_control.hpp  munition.hpp  trajectory.hpp
include/ballistics/math/: math_constants.hpp  vec3.hpp
rag/: RAG_README.md  indexer.py  main.py  mcp_server.py  query.py  requirements.txt
src/: README.md  async_solver.cpp  atmosphere.cpp  fire_control.cpp  munition.cpp  trajectory.cpp
tests/: CMakeLists.txt  README.md  test_trajectory.cpp
